major MatD tuneup based on claude fable critique